--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,6 +15,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - run: dotnet build
+    - run: dotnet tool update --global PowerShell
     - name: Ensure browsers are installed
       run: pwsh bin/Debug/net8.0/playwright.ps1 install --with-deps
     - name: Run your tests
