--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,8 +15,8 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - run: dotnet build
-    - run: dotnet tool update --global PowerShell
+    - run: dotnet tool install --global Microsoft.Playwright.CLI
     - name: Ensure browsers are installed
-      run: pwsh bin/Debug/net8.0/playwright.ps1 install --with-deps
+      run: playwright install
     - name: Run your tests
       run: dotnet test
